[package]
name = "rt-qr"
version = "0.1.0"
authors = ["Ajibola Ojo <pro.ajibolaojo@gmail.com>"]
description = "find realtime qrcodes in js"
license = "MIT/Apache-2.0"
repository = "https://github.com/jbrit/rt-qr"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.4"
image = "0.24.7"
rqrr = "0.6.0"
wasm-bindgen = "0.2"
